Latex escaping problems

--- a/ex17.tex
+++ b/ex17.tex
@@ -21,7 +21,7 @@ does, and look up any functions you do not recognize.  There are few
 key things I'm doing that you should pay attention to as well:
 
 \begin{description}
-\item [#define for constants] I use another part of the "C Pre-Processor" to
+\item [\#define for constants] I use another part of the "C Pre-Processor" to
     create constant settings of \ident{MAX\_DATA} and \ident{MAX\_ROWS}.
 \item [Fixed Sized Structs] The \ident{Address} struct then uses these
     constants to create a piece of data that is fixed in size making it
