--- a/ex17.tex
+++ b/ex17.tex
@@ -129,7 +129,7 @@ then it's on the stack.
 
 There's three primary problems with stacks and heaps to watch for:
 
-\begin{enumearte}
+\begin{enumerate}
 \item If you get a block of memory from \func{malloc}, and have that
     pointer on the stack, then when the function exits, the pointer will
     get popped off and lost.
