Unclear wording on ex13.

--- a/ex13.tex
+++ b/ex13.tex
@@ -89,7 +89,7 @@ Here's just a few of the ways you can mess one of these up:
 \item Accidentally put in variable into the \ident{switch} that
     evaluates to something unexpected, like an \ident{int}
     that becomes weird values.
-\item Use initialized values in the test.
+\item Use uninitialized values in the \ident{switch}.
 \end{enumerate}
 
 You can also break this program in a few other ways.  See if you
