Add a little EC for hacking the binary.

--- a/ex18.tex
+++ b/ex18.tex
@@ -159,6 +159,9 @@ you wouldn't know.
 \item Get a hex editor and open up \program{ex18}, then find this sequence
     of hex digits that start a function to see if you can find the function
     in the raw program.
+\item Find other random things in your hex editor and change them.  Rerun your
+    program and see what happens.  Changing strings you find are the easiest
+    things to change.
 \item Pass in the wrong function for the \ident{compare\_cb} and see what
     the C compiler complains about.
 \item Pass in NULL and watch your program seriously bite it.  Then run
