--- a/ex18.tex
+++ b/ex18.tex
@@ -54,7 +54,7 @@ it's a type.  I demonstrate this in the following exercise code:
 \end{code}
 
 In this program you're creating a dynamic sorting algorithm that can sort
-an array or integers using a comparison callback.  Here's the breakdown
+an array of integers using a comparison callback.  Here's the breakdown
 of this program so you can clearly understand it:
 
 \begin{description}
