Typo blocking TeX.

--- a/ex19.tex
+++ b/ex19.tex
@@ -140,7 +140,7 @@ following:
 \begin{enumerate}
 \item When I say run \program{make} the default \ident{all} should just build
     \program{ex19}.
-\item When you build \progrem{ex19}, you need to also build \file{object.o}
+\item When you build \program{ex19}, you need to also build \file{object.o}
     and include it in the build.
 \item \program{make} can't see anything in the file for \file{object.o}, but it does
     see an \file{object.c} file, and it knows how to turn a \file{.c} into
